Changes to Version 3.0-1

  o For 'smooth' argument to scatterplot and scatterPlot matrix, the 'smooth' subargument is replaced by a new argument 'var', and 'lty.smooth', 'col.smooth', 'lwd.smooth' are replaced by 'lty.var', 'col.var' and 'lwd.var', respectively, although the old arguments are still allowed.

  o Mofidied man page for showLabels to clarify setting the labels argument

  o Too few colors in scatterplot() and scatterplotMatrix() now produces a warning rather than an error (suggestion of John Maindonald).

  o Bug fix to Boot.nlm() (reported by Derek Ogle).

  o Fixed bug in linearHypothesis() for lmer() models using pbkrtest (following report by Francois Piraux). This bug indirectly affected Anova().

  o Fixed bug in scatterplot() when groups variable is not a factor (reported by Alexandre Courtiol).

  o Fixed bug in scatterplot() when legend=FALSE (reported by Castor Guisande).

  o Fixed bug in influence.merMod() and influence.lme() when there is more than one grouping variable (reported by Maarten Jung).

  o Make model.matrix.lme() more bullet proof (following report by Peter Grossmann).
  
  o Anova.lm() now doesn't permit non-standard coefficient covariance matrix for model with aliased coefficients (following report by Ariel Muldoon).

  o Updated carWeb().

  o Small improvements.

  o Small edits to docs.

Changes to Version 3.0-0

  o This version of the package corresponds to the third edition of Fox and Weisberg, An R Companion to Applied Regression (Sage, forthcoming).

  o Reorganized plotting functions.

  o Functions deprecated in 2009 are now defunct.

  o bootCase(), nextBoot(), and their methods are now deprecated in favor of Boot().

  o All data sets moved to the carData package.

  o Improved handling of imports (suggestion of Jonathon Love).

  o Changed as.factor.result argument in recode() to as.factor, and as.numeric.result to as.numeric.

  o New brief(), Confint(), Predict(), Tapply(), S() functions.
