@@ -1,5 +1,7 @@
 Changes to Version 3.0-1
 
+  o Fix a bug in 'Boot' so lm and glm models work with transformed predictors like log(x) or I(x-34).
+  
   o For 'smooth' argument to scatterplot and scatterPlot matrix, the 'smooth' subargument is replaced by a new argument 'var', and 'lty.smooth', 'col.smooth', 'lwd.smooth' are replaced by 'lty.var', 'col.var' and 'lwd.var', respectively, although the old arguments are still allowed.
 
   o Mofidied man page for showLabels to clarify setting the labels argument
